@@ -2,6 +2,10 @@
 - Fixed Eden weapon enchants 3rd slot adjustment according to 1st and 2st slot [NattWara]
 - Fixed Army Padding not showing Mora enchants [NattWara]
 - Fixed Golden Trickle 3rd enchant options not showing up correctly [Loa]
+- Updated DEF reduction from being attacked by multiple monsters [Loa]
+- Updated Items:
+	Assaulter Spear
+	Brave Assassin Damascus
 
 [Update 2018-07-23]
 - Added n_tok for magical damage against a certain element (350-359) [Loa]
